// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render counters with no counters 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 300px;
  height: 30px;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  margin: 10px 0px 0px 0px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 300px;
  margin: 20px;
  padding: 5px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  margin: 20px 0px 10px 0px;
  border-width: 0px 0px 1px 0px;
  border-style: dashed;
  border-color: gray;
}

.c5 {
  margin: 20px 0px 0px 0px;
  border-width: 0px 0px 1px 0px;
  border-style: dashed;
  border-color: gray;
}

.c2 {
  border-width: 0px 0px 1px 0px;
  border-style: solid;
  border-color: gray;
}

.c3 {
  border: 1px solid gray;
  border-radius: 1em;
  width: 100px;
}

.c3:hover {
  background-color: #2ECC40;
}

.c7 {
  margin-left: 10px;
}

<div
  className="c0"
  width="300px"
>
  <div
    className="c1"
    height="30px"
    width="300px"
  >
    <input
      className="c2"
      onChange={[Function]}
      placeholder="Counter title"
      size={15}
      type="text"
      value=""
    />
    <button
      className="c3"
      onClick={[Function]}
      width="100px"
    >
      Add
    </button>
  </div>
  <div
    className="c4"
  />
  <div
    className="c5"
  />
  <div
    className="c6"
  >
    Total:
    <span
      className="c7"
    >
      0
    </span>
  </div>
</div>
`;

exports[`render counters with some counters that have no count 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 300px;
  height: 30px;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  margin: 10px 0px 0px 0px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 30px;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin: 5px 0px 0px 0px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 300px;
  margin: 20px;
  padding: 5px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  margin: 20px 0px 10px 0px;
  border-width: 0px 0px 1px 0px;
  border-style: dashed;
  border-color: gray;
}

.c13 {
  margin: 20px 0px 0px 0px;
  border-width: 0px 0px 1px 0px;
  border-style: dashed;
  border-color: gray;
}

.c2 {
  border-width: 0px 0px 1px 0px;
  border-style: solid;
  border-color: gray;
}

.c3 {
  border: 1px solid gray;
  border-radius: 1em;
  width: 100px;
}

.c3:hover {
  background-color: #2ECC40;
}

.c15 {
  margin-left: 10px;
}

.c7 {
  border: 0px;
  border-radius: 1em 0em 0em 1em;
  width: 30px;
  background-color: #FF4136;
  margin: 0px 2px 0px 0px;
}

.c7:hover {
  margin-right: 10px;
}

.c8 {
  margin-top: 6px;
  text-align: center;
}

.c10 {
  border: 0px;
  border-radius: 1em 0em 0em 1em;
  width: 20px;
}

.c10:hover {
  background-color: #7FDBFF;
}

.c11 {
  text-align: center;
  margin-top: 6px;
  width: 50px;
}

.c12 {
  border: 0px;
  border-radius: 0em 1em 1em 0em;
  width: 20px;
}

.c12:hover {
  background-color: #7FDBFF;
}

<div
  className="c0"
  width="300px"
>
  <div
    className="c1"
    height="30px"
    width="300px"
  >
    <input
      className="c2"
      onChange={[Function]}
      placeholder="Counter title"
      size={15}
      type="text"
      value=""
    />
    <button
      className="c3"
      onClick={[Function]}
      width="100px"
    >
      Add
    </button>
  </div>
  <div
    className="c4"
  />
  <div
    className="c5"
    height="30px"
  >
    <div
      className="c6"
    >
      <button
        className="c7"
        onClick={[Function]}
        width="30px"
      >
        x
      </button>
      <span
        className="c8"
      >
        test
      </span>
    </div>
    <div
      className="c9"
      width="100px"
    >
      <button
        className="c10"
        onClick={[Function]}
        width="20px"
      >
        -
      </button>
      <span
        className="c11"
      >
        0
      </span>
      <button
        className="c12"
        onClick={[Function]}
        width="20px"
      >
        +
      </button>
    </div>
  </div>
  <div
    className="c5"
    height="30px"
  >
    <div
      className="c6"
    >
      <button
        className="c7"
        onClick={[Function]}
        width="30px"
      >
        x
      </button>
      <span
        className="c8"
      >
        test
      </span>
    </div>
    <div
      className="c9"
      width="100px"
    >
      <button
        className="c10"
        onClick={[Function]}
        width="20px"
      >
        -
      </button>
      <span
        className="c11"
      >
        0
      </span>
      <button
        className="c12"
        onClick={[Function]}
        width="20px"
      >
        +
      </button>
    </div>
  </div>
  <div
    className="c5"
    height="30px"
  >
    <div
      className="c6"
    >
      <button
        className="c7"
        onClick={[Function]}
        width="30px"
      >
        x
      </button>
      <span
        className="c8"
      >
        test
      </span>
    </div>
    <div
      className="c9"
      width="100px"
    >
      <button
        className="c10"
        onClick={[Function]}
        width="20px"
      >
        -
      </button>
      <span
        className="c11"
      >
        0
      </span>
      <button
        className="c12"
        onClick={[Function]}
        width="20px"
      >
        +
      </button>
    </div>
  </div>
  <div
    className="c13"
  />
  <div
    className="c14"
  >
    Total:
    <span
      className="c15"
    >
      0
    </span>
  </div>
</div>
`;

exports[`render counters with some counters that have some count 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 300px;
  height: 30px;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  margin: 10px 0px 0px 0px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 30px;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin: 5px 0px 0px 0px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 300px;
  margin: 20px;
  padding: 5px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  margin: 20px 0px 10px 0px;
  border-width: 0px 0px 1px 0px;
  border-style: dashed;
  border-color: gray;
}

.c13 {
  margin: 20px 0px 0px 0px;
  border-width: 0px 0px 1px 0px;
  border-style: dashed;
  border-color: gray;
}

.c2 {
  border-width: 0px 0px 1px 0px;
  border-style: solid;
  border-color: gray;
}

.c3 {
  border: 1px solid gray;
  border-radius: 1em;
  width: 100px;
}

.c3:hover {
  background-color: #2ECC40;
}

.c15 {
  margin-left: 10px;
}

.c7 {
  border: 0px;
  border-radius: 1em 0em 0em 1em;
  width: 30px;
  background-color: #FF4136;
  margin: 0px 2px 0px 0px;
}

.c7:hover {
  margin-right: 10px;
}

.c8 {
  margin-top: 6px;
  text-align: center;
}

.c10 {
  border: 0px;
  border-radius: 1em 0em 0em 1em;
  width: 20px;
}

.c10:hover {
  background-color: #7FDBFF;
}

.c11 {
  text-align: center;
  margin-top: 6px;
  width: 50px;
}

.c12 {
  border: 0px;
  border-radius: 0em 1em 1em 0em;
  width: 20px;
}

.c12:hover {
  background-color: #7FDBFF;
}

<div
  className="c0"
  width="300px"
>
  <div
    className="c1"
    height="30px"
    width="300px"
  >
    <input
      className="c2"
      onChange={[Function]}
      placeholder="Counter title"
      size={15}
      type="text"
      value=""
    />
    <button
      className="c3"
      onClick={[Function]}
      width="100px"
    >
      Add
    </button>
  </div>
  <div
    className="c4"
  />
  <div
    className="c5"
    height="30px"
  >
    <div
      className="c6"
    >
      <button
        className="c7"
        onClick={[Function]}
        width="30px"
      >
        x
      </button>
      <span
        className="c8"
      >
        test
      </span>
    </div>
    <div
      className="c9"
      width="100px"
    >
      <button
        className="c10"
        onClick={[Function]}
        width="20px"
      >
        -
      </button>
      <span
        className="c11"
      >
        1
      </span>
      <button
        className="c12"
        onClick={[Function]}
        width="20px"
      >
        +
      </button>
    </div>
  </div>
  <div
    className="c5"
    height="30px"
  >
    <div
      className="c6"
    >
      <button
        className="c7"
        onClick={[Function]}
        width="30px"
      >
        x
      </button>
      <span
        className="c8"
      >
        test
      </span>
    </div>
    <div
      className="c9"
      width="100px"
    >
      <button
        className="c10"
        onClick={[Function]}
        width="20px"
      >
        -
      </button>
      <span
        className="c11"
      >
        -2
      </span>
      <button
        className="c12"
        onClick={[Function]}
        width="20px"
      >
        +
      </button>
    </div>
  </div>
  <div
    className="c5"
    height="30px"
  >
    <div
      className="c6"
    >
      <button
        className="c7"
        onClick={[Function]}
        width="30px"
      >
        x
      </button>
      <span
        className="c8"
      >
        test
      </span>
    </div>
    <div
      className="c9"
      width="100px"
    >
      <button
        className="c10"
        onClick={[Function]}
        width="20px"
      >
        -
      </button>
      <span
        className="c11"
      >
        5
      </span>
      <button
        className="c12"
        onClick={[Function]}
        width="20px"
      >
        +
      </button>
    </div>
  </div>
  <div
    className="c13"
  />
  <div
    className="c14"
  >
    Total:
    <span
      className="c15"
    >
      4
    </span>
  </div>
</div>
`;
